recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: value lentgh
		avance(lentgh)
                       ^Spiral:5: error: not found: value spirale
		spirale(steps,angle,lentgh,increment)
                ^